Initial quasar and electron configuration

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.16.1",
     "nanoid": "^3.1.18",
+    "node-machine-id": "^1.1.12",
     "quasar": "^1.0.0",
     "semver": "^7.3.2",
     "systeminformation": "^4.30.1",
