Implemented local storage and state persistence. Added mutations on Vuex store for updates to local storage. Added parley data-version field to package for tracking. Mutation call added to App.vue to initialize store.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "parley",
   "version": "0.0.1",
+  "parley": {
+    "data-version": "0.0.1"
+  },
   "description": "Parley for Canvas",
   "productName": "Parley",
   "author": "Justin Dunsworth <justin.dunsworth@gmail.com>",
